--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,5 +9,6 @@
     <h1>Halo, nama saya Rehan</h1>
     <p>Saya sangat menyukai hal baru di dunia IT</p>
     <p>Khususnya di Development Operations</p>
+    <p>Mantap</p>
   </body>
 </html>
