--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,9 +6,6 @@
     <title>Web Services</title>
   </head>
   <body>
-    <h1>Halo, nama saya Rehan</h1>
-    <p>Saya sangat menyukai hal baru di dunia IT</p>
-    <p>Khususnya di Development Operations</p>
-    <p>Mantap</p>
+    <h1>Mantap Jiwa</h1>
   </body>
 </html>
