--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,6 @@
     <title>Web Services</title>
   </head>
   <body>
-    <h1>Mantap Jiwa</h1>
-    <p>Anjay</p>
+    <h1>Codemi Sample Apps</h1>
   </body>
 </html>
